# sillypass

./: .gitignore  Cargo.toml
sillypass-gtk/: Cargo.toml
sillypass-gtk/src/: main.rs
sillypass-lib/: Cargo.toml
sillypass-lib/src/: client.rs  lib.rs  server.rs
sillypass-server/: Cargo.toml
sillypass-server/migrations/: 20240816221340_init.sql  20240817224754_add_client_salt.sql
sillypass-server/src/: main.rs  model.rs
