[package]
name = "sillypass-server"
version = "0.0.0"
edition = "2021"

[dependencies]
actix-web = "4"
dotenvy = "0.15"
uuid = { version = "1.10.0", features = ["serde"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "postgres",
  "migrate",
  "uuid",
] }
log = "0.4.22"
env_logger = "0.11.5"
anyhow = "1.0.86"
actix-jwt-auth-middleware = "0.5.0"
serde = { version = "1.0.208", features = ["derive"] }
ed25519-compact = "2.1.1"
jwt-compact = { version = "0.8.0", features = ["ed25519-compact"] }
argon2 = "0.5.3"
serde_json = "1.0.125"
